# Yank

./: .replit  IDM_Project_Plan.md  README.md  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix
engine/: CMakeLists.txt
engine/include/: chunk_manager.hpp  downloader.hpp  http_server.hpp  resume_manager.hpp  speed_limiter.hpp
engine/src/: chunk_manager.cpp  downloader.cpp  file_assembler.cpp  http_server.cpp  main.cpp  resume_manager.cpp  speed_limiter.cpp
engine/tests/: test_chunk_manager.cpp
extension/: manifest.json  manifest.v2.json
extension/background/: service_worker.js
extension/content_scripts/: video_detector.js
extension/popup/: popup.html  popup.js
gui/: index.html  package-lock.json  package.json  vite.config.js
gui/src/: App.jsx
gui/src/components/: AddDownloadModal.jsx  DownloadItem.jsx  DownloadList.jsx  EditDownloadModal.jsx  SettingsPanel.jsx  SpeedGraph.jsx
gui/src/hooks/: useDownloads.js
orchestrator/: api.py  config.py  main.py  requirements.txt  scheduler.py  video_grabber.py
orchestrator/tests/: test_scheduler.py
scripts/: build.sh  package_all.sh
