[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0.0",
    "yt-dlp>=2026.6.9",
]
